--- a/src/components/alert/alert.less
+++ b/src/components/alert/alert.less
@@ -26,12 +26,14 @@
   &-title {
     font-size: 14px;
     font-weight: 600;
+    line-height: 1;
   }
 
   &-body {
     font-size: 14px;
     color: @color-grey-text;
-    margin-top: 7px;
+    margin-top: 10px;
+    line-height: 1;
   }
 
   &-icon {
