--- a/src/components/notification/notification.less
+++ b/src/components/notification/notification.less
@@ -30,7 +30,7 @@
   display: flex;
 
   &-left {
-    background-color: @color-primary;
+    // background-color: @color-primary;
     min-width: 63px;
     display: flex;
     justify-content: center;
@@ -38,7 +38,7 @@
     background-size: cover;
   }
 
-  &-icon {
+  &-icon, &-emoji {
     vertical-align: middle;
     font-size: 21px;
     color: #ffffff !important;
