--- a/src/components/slider/slider.less
+++ b/src/components/slider/slider.less
@@ -58,6 +58,7 @@
     &-wrapper {
       position: absolute;
       top: -8px;
+      line-height: 1;
       background-color: transparent;
       transform: translateX(-50%);
       user-select: none;
