--- a/docs/css/main.less
+++ b/docs/css/main.less
@@ -8,14 +8,14 @@ h1 {
   line-height: 38px;
 }
 
-a {
-  text-decoration: inherit;
-  color: inherit;
-}
+// a {
+//   text-decoration: inherit;
+//   color: inherit;
+// }
 
-a:visited {
-  color: inherit;
-}
+// a:visited {
+//   color: inherit;
+// }
 
 /*
 
