--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -22,8 +22,7 @@
     border-radius: @border-radius-base;
     background-color: #fff;
     outline: none;
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25),
-    0px 1.5px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: @default-shadow;
     overflow: hidden;
     cursor: default;
   }
