--- a/src/components/numberinput/numberinput.less
+++ b/src/components/numberinput/numberinput.less
@@ -3,7 +3,7 @@
 .it-number-input {
   border: 1px solid @color-secondary-text;
   display: inline-block;
-  border-radius: 4px;
+  border-radius: @border-radius-base;
   overflow: hidden;
   box-sizing: border-box;
   height: 34px;
