--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,7 +1,14 @@
+@import "./variables.less";
+
 body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
 }
 
 p {
   margin: 0px;
+}
+
+a {
+  text-decoration: inherit;
+  color: @color-primary;
 }
