--- a/src/components/dropdown/dropdown.less
+++ b/src/components/dropdown/dropdown.less
@@ -113,7 +113,7 @@
 
 .it-dropdown-menu {
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25), 0px 1.5px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
+  border-radius: @border-radius-base;
   min-width: 130px;
   font-size: 14px;
   font-weight: 400;
