--- a/src/components/input/input.less
+++ b/src/components/input/input.less
@@ -10,7 +10,7 @@
   height: 32px;
   color: @color-black;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: @border-radius-base;
   box-sizing: border-box;
   transition: all 0.2s;
 
@@ -61,6 +61,7 @@
   box-sizing: border-box;
   outline: none;
   border: none;
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
   padding: 4px 10px;
   background: transparent;
 
