--- a/src/components/message/message.less
+++ b/src/components/message/message.less
@@ -16,9 +16,8 @@
   margin-left: auto;
   top: 10px;
   padding: 6px 12px;
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25),
-    0px 1.5px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
+  box-shadow: @default-shadow;
+  border-radius: @border-radius-base;
   // max-width: 150px;
   width: max-content;
   color: @color-secondary-black;
