--- a/src/components/notification/notification.less
+++ b/src/components/notification/notification.less
@@ -15,9 +15,8 @@
   top: 10px;
   // padding: 6px 12px;
   overflow: hidden;
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25),
-    0px 1.5px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
+  box-shadow: @default-shadow;
+  border-radius: @border-radius-base;
   width: 333px;
   max-width: 333px;
   min-height: 60px;
