--- a/src/components/progressbar/progressbar.less
+++ b/src/components/progressbar/progressbar.less
@@ -1,5 +1,20 @@
 @import '../../styles/variables.less';
 
+@keyframes infinite-load {
+  0% {
+    width: 20%;
+    margin-left: -20%;
+  }
+  // 50% {
+  //   width: 50%;
+  //   margin-left: 20%;
+  // }
+  100% {
+    width: 40%;
+    margin-left: 100%
+  }
+}
+
 .it-progress-wrapper {
   display: inline-block;
   width: 100%;
@@ -21,4 +36,8 @@
   transition: all .2s ease-out;
   border-radius: 4px;
   height: 100%;
+
+  &--infinite {
+    animation: infinite-load 1.15s ease-in-out infinite;
+  }
 }
