--- a/src/components/select/select.less
+++ b/src/components/select/select.less
@@ -2,7 +2,7 @@
 
 .it-select {
   display: inline-block;
-  // position: relative;
+  position: relative;
   min-width: 100px;
 }
 
@@ -81,7 +81,7 @@
 
 .it-select-list {
   box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25), 0px 1.5px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
+  border-radius: @border-radius-base;
   min-width: 130px;
   font-size: 13px;
   width: inherit;
