--- a/src/components/tag/tag.less
+++ b/src/components/tag/tag.less
@@ -2,6 +2,10 @@
 
 .set-type (@color) {
   border: 1px solid @color;
+  &--filled {
+    background-color: @color;
+    color: #fff;
+  }
 }
 
 .it-tag {
@@ -11,7 +15,7 @@
   vertical-align: middle;
   border: 1px solid @color-secondary-text;
   box-sizing: border-box;
-  border-radius: 4px;
+  border-radius: @border-radius-base;
   font-weight: 500;
   padding: 5px 10px;
   color: @color-secondary-black;
