--- a/src/components/textarea/textarea.less
+++ b/src/components/textarea/textarea.less
@@ -7,7 +7,7 @@
   height: 32px;
   color: #131313;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: @border-radius-base;
   box-sizing: border-box;
   transition: border 0.2s;
   transition: background-color 0.2s;
