--- a/src/components/tooltip/tooltip.less
+++ b/src/components/tooltip/tooltip.less
@@ -46,7 +46,7 @@
 
 
 .it-tooltip {
-  /* element */
+  display: inline-block;
   &__trigger {
     display: inline-block;
     position: relative;
@@ -59,16 +59,14 @@
   }
   &__content {
     padding: 8px;
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25),
-      0px 1.5px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: @default-shadow;
     border-radius: 4px;
     max-width: 150px;
-    // min-width: 100px;
     width: max-content;
     color: @color-secondary-black;
     font-size: 12px;
     line-height: 1;
-    border-radius: 4;
+    border-radius: @border-radius-base;
     background-color: #fff;
     word-wrap: break-word;
   }
