--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -4,15 +4,15 @@
 /* Colors */
 @color-primary: #3051ff;
 @color-success: #07d85b;
-@color-danger: #F93155;
+@color-danger: #f93155;
 @color-warning: #ffba00;
 @color-black: #131313;
 @color-secondary-black: #232323;
 @color-disabled-bg: #f2f2f2;
-@color-grey-text: #5F616C;
+@color-grey-text: #5f616c;
 
-@color-neutral: #C4C4C4;
-@color-secondary-text: #DFDFDF; // explosive :3
+@color-neutral: #c4c4c4;
+@color-secondary-text: #dfdfdf;
 
 /* Border */
 @border-radius-base: 4px;
@@ -21,3 +21,7 @@
 /* text */
 @default-text-size: 14px;
 @default-text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.07);
+
+/* shadows */
+@default-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25),
+  0px 1.5px 1px rgba(0, 0, 0, 0.1);
