--- a/src/components/badge/badge.less
+++ b/src/components/badge/badge.less
@@ -40,6 +40,10 @@
       transform: translateX(50%);
     }
 
+    &--square {
+      border-radius: 5px;
+    }
+
     &--point {
       padding: 0;
       width: 10px;
