--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -14,7 +14,10 @@
 
   &-body {
     position: relative;
-
+    max-width: 90%;
+    display: flex;
+    max-height: 50%;
+    flex-direction: column;
     top: 150px;
     width: 500px;
     margin: 0 auto;
