--- a/src/components/slider/slider.less
+++ b/src/components/slider/slider.less
@@ -65,4 +65,17 @@
       cursor: grab;
     }
   }
+
+
+  &-numbers {
+  position: relative;
+  padding-top: 5px;
+
+  & > div {
+    position: absolute;
+    display: inline-block;
+    font-size: 12px;
+    transform: translateX(-50%);
+  }
+}
 }
