--- a/src/components/notification/notification.less
+++ b/src/components/notification/notification.less
@@ -11,8 +11,8 @@
 
   z-index: 99999;
   position: fixed;
-  right: 10px;
-  top: 10px;
+  // right: 10px;
+  // top: 10px;
   // padding: 6px 12px;
   overflow: hidden;
   box-shadow: @default-shadow;
@@ -41,6 +41,7 @@
     vertical-align: middle;
     font-size: 21px;
     color: #ffffff !important;
+    user-select: none;
   }
 
   &-text-block {
