--- a/src/components/numberinput/numberinput.less
+++ b/src/components/numberinput/numberinput.less
@@ -21,7 +21,7 @@
   }
 
   &:hover {
-    border: 1px solid @color-neutral;
+    border: 1px solid darken(@color-secondary-text, 10);
     .it-number-input-controller {
       opacity: 1;
     }
