--- a/src/components/tag/tag.less
+++ b/src/components/tag/tag.less
@@ -11,7 +11,7 @@
 .it-tag {
   font-size: 12px;
   line-height: 1;
-  display: inline-block;
+  display: inline-flex;
   vertical-align: middle;
   border: 1px solid @color-secondary-text;
   box-sizing: border-box;
@@ -26,6 +26,7 @@
     vertical-align: middle;
     cursor: pointer;
     color: @color-neutral;
+    margin-left: 5px;
 
     &:hover {
       color: #919191;
