--- a/src/components/tooltip/tooltip.less
+++ b/src/components/tooltip/tooltip.less
@@ -61,7 +61,7 @@
     padding: 8px;
     box-shadow: @default-shadow;
     border-radius: 4px;
-    max-width: 150px;
+    // max-width: 160px;
     width: max-content;
     color: @color-secondary-black;
     font-size: 12px;
