--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,7 +1,9 @@
 @import "./variables.less";
 
-body {
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: Inter,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif; -webkit-font-smoothing: antialiased;}
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var',system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif; -webkit-font-smoothing: antialiased;}
 }
 
 p {
