--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -12,7 +12,7 @@
 @color-grey-text: #5f616c;
 
 @color-neutral: #c4c4c4;
-@color-secondary-text: #dfdfdf;
+@color-secondary-text: #d3dae6;
 
 /* Border */
 @border-radius-base: 4px;
