--- a/src/components/badge/badge.less
+++ b/src/components/badge/badge.less
@@ -19,6 +19,7 @@
     white-space: nowrap;
     border: 1px solid #fff;
     border-radius: 9px;
+    // box-shadow: #e4e7eb 0px 1px 1px 0px;
 
     &--primary {
       .set-type(@color-primary);
@@ -34,10 +35,30 @@
     }
 
     &--corner {
-      position: absolute;
-      top: -8px;
-      right: 0;
-      transform: translateX(50%);
+      &-top-right {
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translateX(45%) translateY(-45%);
+      }
+      &-top-left {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateX(-45%) translateY(-45%);
+      }
+      &-bottom-right {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        transform: translateX(45%) translateY(45%);
+      }
+      &-bottom-left {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transform: translateX(-45%) translateY(45%);
+      }
     }
 
     &--square {
@@ -48,7 +69,7 @@
       padding: 0;
       width: 10px;
       height: 10px;
-      top: -5px;
+      // top: -5px;
     }
   }
 }
