--- a/src/components/button/button.less
+++ b/src/components/button/button.less
@@ -1,7 +1,7 @@
-@import "../../styles/variables.less";
+@import '../../styles/variables.less';
 
 @btn-font-weight: 500;
-@btn-normal-padding: 9px 20px;
+@btn-normal-padding: 8px 20px;
 
 /* Colors */
 @btn-disabled-color: #cacccf;
@@ -14,13 +14,19 @@
 .set-type (@bg-color) {
   background-color: @bg-color;
   box-shadow: 0px 2px 4px fade(@bg-color, 40%);
+  border: 1px solid @bg-color;
   &:hover {
     background-color: lighten(@bg-color, 5%);
+    border: 1px solid lighten(@bg-color, 5%);
+  }
+  &:focus {
+    box-shadow: 0px 2px 4px fade(@bg-color, 40%), 0 0 0 3px fade(@bg-color, 20%);
   }
   &:active {
     background-color: darken(@bg-color, 7%);
+    border: 1px solid darken(@bg-color, 7%);
     box-shadow: none;
-    top: 1px;
+    // top: 1px;
   }
 
   &:disabled {
@@ -33,20 +39,24 @@
 .set-outlined (@bg-color) {
   color: @bg-color;
   background-color: #fff;
-  box-shadow: inset 0 0 0 1px @bg-color;
+  box-shadow: none;
+  border: 1px solid @bg-color;
   text-shadow: none;
 
   circle {
     stroke: @bg-color !important;
   }
 
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: fade(@bg-color, 7%);
+  }
+  &:focus {
+    box-shadow: 0 0 0 3px fade(@bg-color, 20%);
   }
   &:active {
     background-color: fade(@bg-color, 15%) !important;
-    box-shadow: inset 0 0 0 1px @bg-color;
+    // box-shadow: inset 0 0 0 1px @bg-color;
+    // border: 1px solid @bg-color;
     top: 0px;
   }
   &:disabled {
@@ -59,9 +69,11 @@
 .it-btn {
   box-sizing: border-box;
   position: relative;
-  display: inline-block;
-  font-family: "Avenir", Helvetica, Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  font-family: inherit;
   align-items: center;
+  margin: 0;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.07);
   color: #fff;
   font-weight: @btn-font-weight;
@@ -83,50 +95,59 @@
   &-text,
   > i {
     vertical-align: middle;
+    // letter-spacing: .025em;
+  }
+
+  &-text {
+    display: flex;
   }
 
   > .it-icon {
     font-size: 14px;
+    margin-top: -2px;
   }
 
   &--primary {
     .set-type(@color-primary);
-    &--outlined {
-      .set-outlined(@color-primary);
-    }
+  }
+  &--primary&--outlined {
+    .set-outlined(@color-primary);
   }
   &--success {
     .set-type(@color-success);
-    &--outlined {
-      .set-outlined(@color-success);
-    }
+  }
+  &--success&--outlined {
+    .set-outlined(@color-success);
   }
   &--warning {
     .set-type(@color-warning);
-    &--outlined {
-      .set-outlined(@color-warning);
-    }
+  }
+  &--warning&--outlined {
+    .set-outlined(@color-warning);
   }
   &--danger {
     .set-type(@color-danger);
-    &--outlined {
-      .set-outlined(@color-danger);
-    }
+  }
+  &--danger&--outlined {
+    .set-outlined(@color-danger);
   }
   &--black {
     .set-type(@color-secondary-black);
-    &--outlined {
-      .set-outlined(@color-secondary-black);
-    }
   }
+  &--black&--outlined {
+    .set-outlined(@color-secondary-black);
+  }
+
   &--neutral {
     color: @color-black;
-    border: 1px solid rgb(193, 204, 217);
-    box-shadow: rgb(228, 231, 235) 0px 1px 1px 0px;
+    border: 1px solid #c1ccd9;
+    box-shadow: #e4e7eb 0px 1px 1px 0px;
     text-shadow: none;
+    box-sizing: border-box;
     background-color: #ffffff;
-    &:hover {
-      border: 1px solid @color-neutral;
+    &:focus {
+      border: 1px solid #a6b0bb;
+      box-shadow: #e4e7eb 0px 1px 1px 0px, 0 0 0 3px fade(#a6b0bb, 20%);
     }
     &:active {
       background-color: @color-disabled-bg;
@@ -135,11 +156,11 @@
       stroke: rgb(193, 204, 217);
     }
 
-      &:disabled {
-    circle {
-      stroke: @btn-disabled-color;
+    &:disabled {
+      circle {
+        stroke: @btn-disabled-color;
+      }
     }
-  }
   }
 
   &:disabled,
@@ -148,10 +169,10 @@
     top: 0px;
     cursor: not-allowed;
     color: @btn-disabled-color;
-    box-shadow: inset 0 0 0 1px @btn-disabled-border-color;
+    border: 1px solid @btn-disabled-border-color;
     background-color: @color-disabled-bg !important;
     text-shadow: none;
-    border: none;
+    box-shadow: none;
   }
   &--big {
     padding: 14px 28px;
@@ -160,5 +181,125 @@
   &--small {
     padding: 6px 15px;
     font-size: 12px;
+  }
+}
+
+.it-button-group {
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+
+  .it-btn {
+    border-radius: 0px;
+    z-index: 2;
+
+    &:focus {
+      z-index: 1;
+    }
+  }
+
+  &--vertical {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .it-btn {
+      border-radius: 0px;
+      z-index: 2;
+      width: 100%;
+
+      &:focus {
+        z-index: 1;
+      }
+    }
+
+    .it-tooltip,
+    .it-tooltip__trigger {
+      width: 100%;
+    }
+
+    .it-tooltip:first-child .it-btn,
+    & > .it-btn:first-child {
+      border-radius: 4px 4px 0 0;
+      border-bottom-width: 0;
+    }
+
+    .it-tooltip:first-child .it-btn--outlined,
+    & > .it-btn--outlined:first-child {
+      border-bottom-width: 1px !important;
+    }
+
+    .it-tooltip:last-child .it-btn,
+    & > .it-btn:last-child {
+      border-radius: 0 0 4px 4px;
+    }
+
+    .it-tooltip:not(:last-of-type) .it-btn--neutral,
+    & > .it-btn--neutral:not(:last-of-type) {
+      border-bottom-width: 0;
+      box-shadow: none;
+      &:focus {
+        box-shadow: 0 0 0 3px fade(#a6b0bb, 20%);
+      }
+    }
+
+    .it-tooltip:last-child .it-btn--outlined,
+    .it-btn + .it-btn--outlined:last-child {
+      border-top-width: 1px !important;
+    }
+
+    .it-btn--neutral:not(:last-of-type):not(:first-of-type) {
+      border-bottom-width: 0 !important;
+    }
+
+    .it-btn--outlined:not(:last-of-type):not(:first-of-type) {
+      border-bottom-width: 0 !important;
+    }
+
+    .it-tooltip + .it-tooltip .it-btn--outlined,
+    .it-btn--outlined + .it-btn {
+      border-top-width: 0 !important;
+      // border-radius: 0;
+    }
+  }
+
+  .it-tooltip:first-child .it-btn,
+  & > .it-btn:first-child {
+    border-radius: 4px 0 0 4px;
+    border-right-width: 0;
+  }
+
+  .it-tooltip:first-child .it-btn--outlined,
+  & > .it-btn--outlined:first-child {
+    border-right-width: 1px !important;
+  }
+
+  .it-tooltip:last-child .it-btn,
+  & > .it-btn:last-of-type {
+    border-radius: 0 4px 4px 0;
+  }
+
+  .it-tooltip:not(:last-of-type) .it-btn--neutral,
+  & >.it-btn--neutral:not(:last-of-type) {
+    border-right-width: 0;
+  }
+
+  .it-tooltip:last-child .it-btn--outlined,
+  & > .it-btn + .it-btn--outlined:last-child {
+    border-left-width: 1px;
+  }
+
+  & > .it-btn--neutral:not(:last-of-type):not(:first-of-type) {
+    border-right-width: 0 !important;
+  }
+
+  & > .it-btn--outlined:not(:last-of-type):not(:first-of-type) {
+    border-right-width: 0 !important;
+  }
+
+  .it-tooltip + .it-tooltip .it-btn--outlined,
+  & > .it-btn--outlined + .it-btn {
+    border-left-width: 0;
   }
 }
