--- a/src/components/checkbox/checkbox.less
+++ b/src/components/checkbox/checkbox.less
@@ -3,8 +3,6 @@
 @it-checkbox-size: 18px;
 
 .set-type (@bg-color) {
-  
-
   &:hover {
     border: 1px solid @bg-color;
   }
@@ -31,6 +29,12 @@
 
   &:active {
     background-color: fade(@bg-color, 10%);
+    border-color: @bg-color;
+  }
+
+  .it-checkbox-input:focus + & {
+    border: 1px solid @bg-color;
+    box-shadow: 0 0 0 3px fade(@bg-color, 20%);
   }
 }
 
@@ -38,15 +42,42 @@
   margin: 0;
   padding: 0;
   position: relative;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 
   line-height: 1;
   white-space: nowrap;
-  vertical-align: middle;
+  // vertical-align: middle;
   outline: none;
   cursor: pointer;
 
   > .it-checkbox-label {
+    transition: all 0.2s ease-out;
+
+    &::before {
+      transition: all 0.2s ease-out;
+      position: absolute;
+      width: 0px;
+      height: 2px;
+      left: 7px;
+      border-radius: 50px;
+      background: #949494;
+      content: '';
+    }
+
+    &--linethrough {
+      color: #c4c4c4;
+      &::before {
+        width: calc(100% - 7px);
+      }
+    }
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
     vertical-align: middle;
     font-size: 14px;
     padding-left: 8px;
@@ -56,7 +87,9 @@
 .it-checkbox {
   color: #fff;
   border: 1px solid @color-secondary-text;
+  box-shadow: 0px 1px 1px 0px #d3dae64d;
   box-sizing: border-box;
+  background-color: #ffffff;
   position: relative;
   display: inline-block;
   vertical-align: middle;
@@ -95,7 +128,7 @@
     &:hover {
       border: 1px solid @color-primary;
     }
-  
+
     &--checked {
       border: 1px solid @color-primary;
       > i {
@@ -114,9 +147,14 @@
         }
       }
     }
-  
+
     &:active {
       background-color: fade(@color-primary, 10%);
+    }
+
+    .it-checkbox-input:focus + & {
+      border: 1px solid @color-primary;
+      box-shadow: 0 0 0 3px fade(@color-primary, 20%);
     }
   }
 
