--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -21,7 +21,7 @@
     display: flex;
     max-height: 50%;
     flex-direction: column;
-    top: -12%;
+    top: -20px;
     width: 500px;
     margin: 0 auto;
     border: none;
@@ -30,6 +30,7 @@
     outline: none;
     box-shadow: @default-shadow;
     cursor: default;
+    overflow: hidden;
   }
 
   &-header {
@@ -47,16 +48,28 @@
   }
 
   &-footer {
-    background-color: #f9f9f9;
-    text-align: right;
+    background-color: #F7FAFC;
+    display: flex;
+    flex-direction: row-reverse;
     padding: 16px 24px;
 
     .it-btn + .it-btn {
-      margin-left: 16px;
+      margin-right: 16px;
     }
   }
 }
 
 .stop-scroll {
   overflow: hidden;
+}
+
+@media only screen and (max-width: 500px) {
+  .it-modal-footer {
+    flex-direction: column;
+
+    .it-btn + .it-btn {
+      margin-top: 8px;
+      margin-right: 0;
+    }
+  }
 }
